--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "gsap": "^3.10.4",
+    "history": "^5.3.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
